# rules-automation

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: database.py  db_models.py  main.py  models.py
backend/migrations/: 001_initial_schema.sql  002_sample_data.sql
frontend/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/pages/: Apply.tsx  RuleEdit.tsx  RulesList.tsx
